--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,5 +8,12 @@
     <h1>Welcome, <%= user.name %></h1>
     <h3>Email <%= user.email %></h3>
     <h3>Phone <%= user.mobile %></h3>
+    <ul>
+        <% user.skills.forEach((skill) => { %>
+            <li>
+                <%= skill %>
+            </li>
+        <% }) %>
+    </ul>
 </body>
 </html>
